# wrover-experimental

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  build.sh  flash.sh  run-wokwi.sh  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Build wrover-demo ESP32.yml  Build-wrover-demo-ESP32.yml
src/: main.rs
wokwi/: gdbserver.py  wokwi-server.py
