[package]
name = "brno-public-transport"
version = "0.1.0"
authors = ["Juraj Sadel <juraj.sadel@espressif.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]


[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-sys = { version = "0.31.5", features = ["binstart"] } #0.30.6
esp-idf-svc = { version = "0.41", features = ["experimental"] } #0.37.2
esp-idf-hal = "0.37" #=0.33.1
embedded-svc = "0.21" #0.17.2
embedded-hal = "0.2"
embedded-graphics = "0.7"
embedded-text = "0.5.0"
display-interface = "0.4"
display-interface-spi = "0.4"
log = "0.4"
regex = "1"
soup = "0.5.1"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
time = { version = "0.3.9", features = ["macros", "parsing"]}

[build-dependencies]
embuild = "0.29" #0.28
anyhow = "1"

[patch.crates-io]
parking_lot = { package = "parking_lot", version = "0.12", git = "https://github.com/Amanieu/parking_lot"}

